@@ -78,6 +78,7 @@ def main(global_config, **settings):
     config.add_route('me_menu', '/me_menu')
     config.add_route('login', '/login')
     config.add_route('logout', '/logout')
+    config.add_route('test_bootstrap', '/testBootstrap')
 
     config.add_route('busy_dialog', 'dialog/busy')
 
