@@ -125,7 +125,8 @@
 
                         formatter: function (value) {
 
-                            return new Date(parseInt(value));
+                            var start_date = new Date(parseInt(value));
+                            return start_date.format("yyyy-mm-dd HH:00");
 
                         }
                     },
@@ -134,7 +135,8 @@
                         label: "End Date",
                         formatter: function (value) {
 
-                            return new Date(parseInt(value));
+                            var end_date = new Date(parseInt(value));
+                            return end_date.format("yyyy-mm-dd HH:00");
 
                         }
                     },
