@@ -35,6 +35,12 @@ logger = logging.getLogger(__name__)
 logger.setLevel(log.logging_level)
 
 
+@view_config(
+    route_name='test_bootstrap',
+    renderer='templates/test_bootstrap.jinja2'
+)
+def test_bootstrap(request):
+    return {}
 
 
 
