@@ -39,6 +39,7 @@ Stalker Pyramid Changes
 * **Fix:** URL of duplicate task hierarchy method changed into Restful service
    scheme format.
 * **New:** Gantt Chart is displayed in Department Views Task tab.
+* **Update:** The date time format in dgrid views is turn into yyyy-mm-dd HH:MM
 
 0.1.0.b2
 ========
